optimize imports and code