@@ -5,19 +5,18 @@ import alekseew.entity.CsMarketItem;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import alekseew.services.IService;
-
-
 import java.io.IOException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @Component
 public class CsMarketService implements IService {
-    private CsMarketJsonParser csMarketJsonParse;
+    private final CsMarketJsonParser csMarketJsonParse;
     @Autowired
     public CsMarketService(CsMarketJsonParser csMarketJsonParse) {
         this.csMarketJsonParse = csMarketJsonParse;
@@ -25,7 +24,7 @@ public class CsMarketService implements IService {
 
     public CsMarketItem searchByName(String name) throws InterruptedException, IOException {
         HttpClient client = HttpClient.newHttpClient();
-        String encodedString = URLEncoder.encode(name, "UTF-8");
+        String encodedString = URLEncoder.encode(name, StandardCharsets.UTF_8);
         URI uri = URI.create("https://market.csgo.com/api/v2/search-item-by-hash-name?key="+ConfProperties.getProperty("csMarketApiKey")+"&hash_name="+encodedString);
         HttpRequest request=HttpRequest
                 .newBuilder()
@@ -35,7 +34,7 @@ public class CsMarketService implements IService {
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         List<CsMarketItem> csMarketItems = csMarketJsonParse.parseResponseToList(response.body());
         if(csMarketItems.isEmpty()){
-            return new CsMarketItem(name,0,0);
+            return new CsMarketItem(name,0);
         }
         return csMarketItems.get(0);
     }
