@@ -1,23 +1,21 @@
 package alekseew.services.csmoney;
 
 import alekseew.entity.CsMoneyItem;
-import alekseew.entity.ItemInterface;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import alekseew.services.IService;
-
-
 import java.io.IOException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @Component
 public class CsMoneyService implements IService {
-    private CsMoneyJsonParser csMoneyJsonParser ;
+    private final CsMoneyJsonParser csMoneyJsonParser ;
     @Autowired
     public CsMoneyService(CsMoneyJsonParser csMoneyJsonParser) {
         this.csMoneyJsonParser = csMoneyJsonParser;
@@ -25,7 +23,7 @@ public class CsMoneyService implements IService {
     @Override
     public CsMoneyItem searchByName(String name) throws IOException, InterruptedException {
         HttpClient client = HttpClient.newHttpClient();
-        String encodedString = URLEncoder.encode(name, "UTF-8");
+        String encodedString = URLEncoder.encode(name, StandardCharsets.UTF_8);
 
         URI uri = URI.create("https://cs.money/1.0/market/sell-orders?limit=1&name="+encodedString+"&order=asc&sort=price");
         HttpRequest request=HttpRequest
